--- a/old/i3/config
+++ b/old/i3/config
@@ -55,9 +55,7 @@ bindsym $mod+Shift+q kill
 # start dmenu (a program launcher)
 #bindsym $mod+d exec --no-startup-id dmenu_run
 # A more modern dmenu replacement is rofi:
-#bindcode $mod+40 exec "rofi -modi drun,run -show drun"
-bindcode $mod+40 exec /home/snow/.config/rofi/launchers/type-4/launcher.sh
-
+ bindcode $mod+40 exec "rofi -modi drun,run -show drun"
 # There also is i3-dmenu-desktop which only displays applications shipping a
 # .desktop file. It is a wrapper around dmenu, so you need that installed.
 # bindcode $mod+40 exec --no-startup-id i3-dmenu-desktop
@@ -115,9 +113,9 @@ bindsym $mod+a focus parent
 # Define names for default workspaces for which we configure key bindings later on.
 # We use variables to avoid repeating the names in multiple places.
 #set variables for monitors left center right
-set $fm HDMI-0
-set $sm DP-2
-set $tm DP-0
+set $fm DP-0
+set $sm HDMI-0
+set $tm DP-2
 
 set $ws1 "1"
 set $ws2 "2"
@@ -175,17 +173,17 @@ bindsym $mod+Shift+9 move container to workspace number $ws9
 bindsym $mod+Shift+0 move container to workspace number $ws10
 bindsym Mod1+Shift+1 move container to workspace number $ws11
 
-workspace $ws1 output HDMI-0
-workspace $ws2 output HDMI-0
-workspace $ws3 output HDMI-0
+workspace $ws1 output DP-0
+workspace $ws2 output DP-0
+workspace $ws3 output DP-0
 
-workspace $ws4 output DP-2
-workspace $ws5 output DP-2
-workspace $ws6 output DP-2
+workspace $ws4 output HDMI-0
+workspace $ws5 output HDMI-0
+workspace $ws6 output HDMI-0
 
-workspace $ws7 output DP-0
-workspace $ws8 output DP-0
-workspace $ws9 output DP-0
+workspace $ws7 output DP-2
+workspace $ws8 output DP-2
+workspace $ws9 output DP-2
 
 # reload the configuration file
 bindsym $mod+Shift+c reload
@@ -240,8 +238,6 @@ exec_always feh --bg-center /home/snow/Pictures/5.jpg
 #set betterlockscreen
 bindsym $mod+x exec betterlockscreen -l 
 
-#set yazi (terminal file manager)
-bindsym $mod+c exec yazi
 
 #start picom
 #exec_always --not-startup-id picom & $HOME/.config/picom/picom.conf opacity-rule = [ "80:class_g = 'Alacritty'", ]; $HOME/.config/alacritty/alacritty.conf background_opacity: 1.0 
@@ -251,16 +247,14 @@ exec_always --no-startup-id /home/snow/.config/picom/picom.conf
 
 #exec --no-startup-id  xrandr --output "HDMI-1" --mode 2560x1440 --rate 120 --output "DP-0" --primary --mode 2560x1440 --rate 144 --right-of "HDMI-1" --output "HDMI-0" --mode 2560x1440 --rate 120 --right-of "DP-0"
 
-exec --no-startup-id  xrandr --output DP-2 --primary --mode 2560x1440 --rate 165 --output DP-0 --mode 2560x1440 --rate 60 --right-of DP-2 --output HDMI-0 --mode 2560x1440 --rate 60 --left-of DP-2
-exec --no-startup-id xinput --set-prop 9 'libinput Accel Speed' 1.5
+#exec --no-startup-id  xrandr --output "DP-2" --mode 2560x1440 --rate 165 --output "DP-0" --primary --mode 2560x1440 --rate 144 --right-of "DP-2"
+exec --no-startup-id xrandr --output "DP-0" --mode 2560x1440 --rate 165 --output "HDMI-0" --primary --mode 2560x1440 --rate 144 --right-of "DP-0" --output "DP-2" --mode 2560x1440 --rate 144 --right-of "HDMI-0"
 
-#exec --no-startup-id xrandr --output "DP-0" --mode 2560x1440 --rate 165 --output "HDMI-0" --primary --mode 2560x1440 --rate 144 --right-of "DP-0" --output "DP-2" --mode 2560x1440 --rate 144 --right-of "HDMI-0"
-#exec --no-startup-id xrandr --output "DP-2" -- mode 2560x1440 --rate 165 
 #Polybar Launch Script
 exec_always --no-startup-id $HOME/.config/polybar/launch.sh
 
 #conky Launch Script
-#exec_always --no-startup-id $HOME/.config/.conky/awesome-conky/start.sh
+exec_always --no-startup-id $HOME/.config/.conky/awesome-conky/start.sh
 
 #caffeine
 #exec_always --no-startup-id caffeine
@@ -275,23 +269,4 @@ exec_always --no-startup-id clipster -d
 bindsym ctrl+Shift+v exec roficlip
 
 #ckb-next
-#exec_always --no-startup-id ckb-next
-
-#configuring colors
-#color palette: https://coolors.co/705541-0b0f1a-0e1014-14191e-232127-0b0e14-0b0e14-4d5e75-d2a750-131214
-#window border                  border          backg.          text            indic           child_border
-client.focused                  #65A5fA         #232127         #39BAE6         #65A5FA         #65A5FA
-client.urgent                   #2f343a         #F26D78         #ffffff         #F26D78         #F26D78
-client.unfocused                #333333         #4D5e7540       #0E101499       #292d2e         #222222
-client.focused_inactive         #333333         #0D1017         #95E6CB         #484e50         #5f676a
-#paint the background of the client window on top of which the client will be rendered. Only clients which do not cover the whole area of this window
-client.background       #409FFF4D
-
-#font
-#font pango:DejaVu Sans Mono 10
-font pango:Noto Mono, Noto Sans Mono CJK JP, FontAwesome bold 10
-#center title
-title_align center
-
-#border
-default_border pixel 5
+exec_always --no-startup-id ckb-next
